# OksHouse-User

./: .gitignore  LICENSE  README.md  index.html  inquiry.html  manage.html  modify.html  package-lock.json  package.json  reservation.html  svelte.config.js  vite.config.js
.github/workflows/: deploy.yml
backend/: FCM_SETUP.md  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: __init__.py  admins.py  extended_reservations.py  reservations.py
backend/app/api/v1/admin/: __init__.py  admins.py  auth.py  fcm.py  reservations.py
backend/app/api/v1/public/: __init__.py  health.py
backend/app/api/v1/user/: __init__.py  auth.py  reservations.py
backend/app/core/: config.py  security.py
backend/app/db/: database.py
backend/app/middleware/: __init__.py  api_key.py
backend/app/models/: __init__.py  admin.py  reservation.py
backend/app/schemas/: __init__.py  admin.py  auth.py  reservation.py
backend/app/services/: __init__.py  admin_service.py  auth_service.py  extended_reservation_service.py  fcm_service.py  reservation_service.py
backend/tests/: test_extended_features.py  test_reservations.py  test_structured_api.py
css/: calendar.css  common.css  index.css  manage.css  privacy.css  reservation.css
frontend/: .gitignore  package.json
frontend/admin/: FIREBASE_CONFIG.md  README.md  package.json  vite.config.js
frontend/src/: app.css  app.html
frontend/user/: README.md  package.json
js/: README.md  calendar.js  common.js  privacy.js
src/: app.css  app.html
src/routes/: +layout.svelte  (+1 more)
static/: 404.html
(+58 files in other folders)
