[project]
name = "okshouse-backend"
version = "0.1.0"
description = "Ok's House 별장 예약시스템 Backend API"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.25.0",
    "pycryptodome>=3.23.0",
    "pyjwt>=2.8.0",
    "python-multipart>=0.0.6",
    "firebase-admin>=6.9.0",
    "google-auth>=2.40.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uvicorn]
host = "0.0.0.0"
port = 8000
reload = true
